--- a/02. Langchain Agents/Langchain_Agents_Custom_LangGraph_Agents.ipynb
+++ b/02. Langchain Agents/Langchain_Agents_Custom_LangGraph_Agents.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "openai_api_key = data[\"open_ai_api_key\"]\n",
     "langchain_api_key = data[\"langchain_api_key\"]\n",
-    "tavily_api_key = data[\"tavily_api_key\"]\n",
+    "# tavily_api_key = data[\"tavily_api_key\"]\n",
     "groq_api_key = data[\"groq_api_key\"]\n",
     "\n",
     "# os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
