Initial Reflexion added

--- a/03. Improve Output Quality/Improve_Output_Quality_2_Reflexion.ipynb
+++ b/03. Improve Output Quality/Improve_Output_Quality_2_Reflexion.ipynb
@@ -3,14 +3,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 1. Introduction to Reflection",
+   "source": "## 1. Introduction to Reflexion",
    "id": "b4a143bd8b546718"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T04:55:07.337976Z",
-     "start_time": "2024-07-21T04:55:07.318187Z"
+     "end_time": "2024-07-21T08:20:00.818268Z",
+     "start_time": "2024-07-21T08:20:00.801252Z"
     }
    },
    "cell_type": "code",
@@ -26,8 +26,6 @@
     "# tavily_api_key = data[\"tavily_api_key\"]\n",
     "groq_api_key = data[\"groq_api_key\"]\n",
     "\n",
-    "iterations = 2\n",
-    "\n",
     "# os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
     "# os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
     "# os.environ['LANGCHAIN_API_KEY'] = langchain_api_key"
@@ -39,8 +37,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T04:55:20.646256Z",
-     "start_time": "2024-07-21T04:55:19.847107Z"
+     "end_time": "2024-07-21T08:20:02.252616Z",
+     "start_time": "2024-07-21T08:20:01.375931Z"
     }
    },
    "cell_type": "code",
@@ -157,12 +155,189 @@
    "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T08:20:04.393834Z",
+     "start_time": "2024-07-21T08:20:02.255618Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "from langchain_agents._models import get_llm\n",
+    "\n",
+    "llm_llama3 = get_llm(llm_type='llama3', llm_model='llama3-70b-8192', api_key=groq_api_key)"
+   ],
+   "id": "6ab85ee34f83923b",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T08:20:04.425615Z",
+     "start_time": "2024-07-21T08:20:04.396841Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from langchain_core.messages import HumanMessage, ToolMessage\n",
+    "from langchain_core.output_parsers.openai_tools import PydanticToolsParser\n",
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field, ValidationError\n",
+    "from typing import List, Optional\n",
+    "\n",
+    "REFLEXION_LOOP_COUNT = 3\n",
+    "\n",
+    "\n",
+    "class Reflection(BaseModel):\n",
+    "    \"\"\"Reflection on the generated SQL query.\"\"\"\n",
+    "    good: str = Field(description=\"Critique of what is good in the given Postgres SQL query.\")\n",
+    "    missing: str = Field(description=\"Critique of what is missing in the given Postgres SQL query.\")\n",
+    "    improvements: Optional[str] = Field(description=\"Suggestions for improvements for the given Postgres SQL query.\")\n",
+    "\n",
+    "class AnswerQuestion(BaseModel):\n",
+    "    \"\"\"Generate a SQL query to retrieve the data to answer the question. Provide a reflection on the generated query.\"\"\"\n",
+    "\n",
+    "    select_query: str = Field(...,\n",
+    "                              description=\"A PostgreSQL SELECT statement to retrieve the data inorder to answer the question.\")\n",
+    "    df_columns: List[str] = Field(\n",
+    "        ..., description=\"Ordered names to give the DataFrame columns.\"\n",
+    "    )\n",
+    "    df_name: str = Field(\n",
+    "        ..., description=\"The name to give the DataFrame variable in downstream code.\"\n",
+    "    )\n",
+    "    reflection: Reflection = Field(description=\"Your reflection on the generated select query.\")\n",
+    "\n",
+    "\n",
+    "class ResponderWithRetries:\n",
+    "    def __init__(self, runnable, validator):\n",
+    "        self.runnable = runnable\n",
+    "        self.validator = validator\n",
+    "\n",
+    "    def respond(self, state: list):\n",
+    "        response = []\n",
+    "        for attempt in range(REFLEXION_LOOP_COUNT):\n",
+    "            print(f\"attempt: {attempt}\")\n",
+    "            print(f\"state: {state}\")\n",
+    "            response = self.runnable.invoke(\n",
+    "                {\"messages\": state}, {\"tags\": [f\"attempt:{attempt}\"]}\n",
+    "            )\n",
+    "            try:\n",
+    "                self.validator.invoke(response)\n",
+    "                return response\n",
+    "            except ValidationError as e:\n",
+    "                state = state + [\n",
+    "                    response,\n",
+    "                    ToolMessage(\n",
+    "                        content=f\"{repr(e)}\\n\\nPay close attention to the function schema.\\n\\n\"\n",
+    "                                + self.validator.schema_json()\n",
+    "                                + \" Respond by fixing all validation errors.\",\n",
+    "                        tool_call_id=response.tool_calls[0][\"id\"],\n",
+    "                    ),\n",
+    "                ]\n",
+    "        return response"
+   ],
+   "id": "7538d9aeeeb5f77f",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T08:20:04.851800Z",
+     "start_time": "2024-07-21T08:20:04.428597Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import datetime\n",
+    "\n",
+    "retrieve_from_db_prompt_string = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            f\"\"\"\n",
+    "You are an expert at PostgreSQL. You have access to a PostgreSQL database \n",
+    "with the following tables\n",
+    "\n",
+    "{db.table_info}\n",
+    "\n",
+    "Given a user question related to the data in the database, \n",
+    "1. get the relevant data from the tables as a DataFrame using the {{function_name}} tool. \n",
+    "2. Reflect and critique your answer based on the user question. Be severe to maximize improvement.\"\"\",\n",
+    "        ),\n",
+    "        MessagesPlaceholder(variable_name=\"messages\"),\n",
+    "        (\n",
+    "            \"user\",\n",
+    "            \"\\n\\n<system>Reflect on the user's original question and the\"\n",
+    "            \" actions taken thus far. Respond using the {function_name} function.</reminder>\",\n",
+    "        ),\n",
+    "    ]\n",
+    ").partial(\n",
+    "    time=lambda: datetime.datetime.now().isoformat(),\n",
+    ")\n",
+    "\n",
+    "initial_answer_chain = retrieve_from_db_prompt_string.partial(\n",
+    "    function_name=AnswerQuestion.__name__,\n",
+    ") | llm_llama3.bind_tools(tools=[AnswerQuestion])\n",
+    "validator = PydanticToolsParser(tools=[AnswerQuestion])\n",
+    "\n",
+    "first_responder = ResponderWithRetries(\n",
+    "    runnable=initial_answer_chain, validator=validator\n",
+    ")"
+   ],
+   "id": "9054e40f1b76aa58",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T08:20:06.938376Z",
+     "start_time": "2024-07-21T08:20:04.854807Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "example_question = \"Graph the total number of orders of each customer. X axis of the graph has to be in ascending order.\"\n",
+    "initial = first_responder.respond([HumanMessage(content=example_question)])\n",
+    "initial"
+   ],
+   "id": "b4045877af0fcaeb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "attempt: 0\n",
+      "state: [HumanMessage(content='Graph the total number of orders of each customer. X axis of the graph has to be in ascending order.')]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_04pm', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY total_orders ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"}}', 'name': 'AnswerQuestion'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 151, 'prompt_tokens': 1923, 'total_tokens': 2074, 'completion_time': 0.462713862, 'prompt_time': 0.228086462, 'queue_time': None, 'total_time': 0.690800324}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_2f30b0b571', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-95294036-4e3d-4d77-a5e2-1396e02e8082-0', tool_calls=[{'name': 'AnswerQuestion', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY total_orders ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'reflection': {'good': 'The query effectively groups the orders by customer and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}}, 'id': 'call_04pm'}])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T08:00:39.260711Z",
+     "start_time": "2024-07-21T08:00:39.248704Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "966336e57a14b85f"
+   "id": "b954fd9e37d2467c",
+   "outputs": [],
+   "execution_count": 6
   }
  ],
  "metadata": {
