In Reflexion revisor added

--- a/03. Improve Output Quality/Improve_Output_Quality_2_Reflexion.ipynb
+++ b/03. Improve Output Quality/Improve_Output_Quality_2_Reflexion.ipynb
@@ -7,10 +7,16 @@
    "id": "b4a143bd8b546718"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 1.1 Initial Response",
+   "id": "2ef672279201dc92"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T08:20:00.818268Z",
-     "start_time": "2024-07-21T08:20:00.801252Z"
+     "end_time": "2024-07-21T08:36:10.350928Z",
+     "start_time": "2024-07-21T08:36:10.331852Z"
     }
    },
    "cell_type": "code",
@@ -37,8 +43,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T08:20:02.252616Z",
-     "start_time": "2024-07-21T08:20:01.375931Z"
+     "end_time": "2024-07-21T08:36:11.719072Z",
+     "start_time": "2024-07-21T08:36:10.890391Z"
     }
    },
    "cell_type": "code",
@@ -157,8 +163,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T08:20:04.393834Z",
-     "start_time": "2024-07-21T08:20:02.255618Z"
+     "end_time": "2024-07-21T08:36:14.052844Z",
+     "start_time": "2024-07-21T08:36:11.722647Z"
     }
    },
    "cell_type": "code",
@@ -174,8 +180,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T08:20:04.425615Z",
-     "start_time": "2024-07-21T08:20:04.396841Z"
+     "end_time": "2024-07-21T08:36:14.068878Z",
+     "start_time": "2024-07-21T08:36:14.055880Z"
     }
    },
    "cell_type": "code",
@@ -244,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T08:20:04.851800Z",
-     "start_time": "2024-07-21T08:20:04.428597Z"
+     "end_time": "2024-07-21T08:36:14.550704Z",
+     "start_time": "2024-07-21T08:36:14.071416Z"
     }
    },
    "cell_type": "code",
@@ -263,8 +269,9 @@
     "{db.table_info}\n",
     "\n",
     "Given a user question related to the data in the database, \n",
-    "1. get the relevant data from the tables as a DataFrame using the {{function_name}} tool. \n",
-    "2. Reflect and critique your answer based on the user question. Be severe to maximize improvement.\"\"\",\n",
+    "1. {{first_instruction}}\n",
+    "2. get the relevant data from the tables as a DataFrame using the {{function_name}} tool. \n",
+    "3. Reflect and critique your answer based on the user question. Be severe to maximize improvement.\"\"\",\n",
     "        ),\n",
     "        MessagesPlaceholder(variable_name=\"messages\"),\n",
     "        (\n",
@@ -278,6 +285,7 @@
     ")\n",
     "\n",
     "initial_answer_chain = retrieve_from_db_prompt_string.partial(\n",
+    "    first_instruction=\"Generate a SQL query to retrieve the data to answer the question.\",\n",
     "    function_name=AnswerQuestion.__name__,\n",
     ") | llm_llama3.bind_tools(tools=[AnswerQuestion])\n",
     "validator = PydanticToolsParser(tools=[AnswerQuestion])\n",
@@ -293,8 +301,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T08:20:06.938376Z",
-     "start_time": "2024-07-21T08:20:04.854807Z"
+     "end_time": "2024-07-21T08:36:16.435251Z",
+     "start_time": "2024-07-21T08:36:14.554706Z"
     }
    },
    "cell_type": "code",
@@ -316,7 +324,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_04pm', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY total_orders ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"}}', 'name': 'AnswerQuestion'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 151, 'prompt_tokens': 1923, 'total_tokens': 2074, 'completion_time': 0.462713862, 'prompt_time': 0.228086462, 'queue_time': None, 'total_time': 0.690800324}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_2f30b0b571', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-95294036-4e3d-4d77-a5e2-1396e02e8082-0', tool_calls=[{'name': 'AnswerQuestion', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY total_orders ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'reflection': {'good': 'The query effectively groups the orders by customer and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}}, 'id': 'call_04pm'}])"
+       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_crwz', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer ID and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"}}', 'name': 'AnswerQuestion'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 152, 'prompt_tokens': 1916, 'total_tokens': 2068, 'completion_time': 0.483804853, 'prompt_time': 0.246390502, 'queue_time': None, 'total_time': 0.730195355}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_c1a4bcec29', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-a27ec4b1-926a-467a-84ae-32118110e715-0', tool_calls=[{'name': 'AnswerQuestion', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'reflection': {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}}, 'id': 'call_crwz'}])"
       ]
      },
      "execution_count": 6,
@@ -327,17 +335,101 @@
    "execution_count": 6
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 1.2 Response after Reflexion",
+   "id": "9e8a0c1936789ce7"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T08:00:39.260711Z",
-     "start_time": "2024-07-21T08:00:39.248704Z"
+     "end_time": "2024-07-23T13:49:50.533844Z",
+     "start_time": "2024-07-23T13:49:50.471745Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "b954fd9e37d2467c",
+   "source": [
+    "revise_instructions = \"\"\"Revise your previous answer using the new information.\n",
+    "    - You should use the previous critique to add important information to your answer.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "class ReviseAnswer(AnswerQuestion):\n",
+    "    \"\"\"Revise your original answer to your question. Provide an answer and \n",
+    "    reflection on the revised answer.\"\"\"\n",
+    "\n",
+    "    think_process: list[str] = Field(\n",
+    "        description=\"Factors motivating your updated select SQL query.\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "revision_chain = retrieve_from_db_prompt_string.partial(\n",
+    "    first_instruction=revise_instructions,\n",
+    "    function_name=ReviseAnswer.__name__,\n",
+    ") | llm_llama3.bind_tools(tools=[ReviseAnswer])\n",
+    "revision_validator = PydanticToolsParser(tools=[ReviseAnswer])\n",
+    "\n",
+    "revisor = ResponderWithRetries(runnable=revision_chain, validator=revision_validator)"
+   ],
+   "id": "9762bacc86771e6b",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-23T13:49:55.346941Z",
+     "start_time": "2024-07-23T13:49:53.864131Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import json\n",
+    "\n",
+    "revised = revisor.respond(\n",
+    "    [\n",
+    "        HumanMessage(content=example_question),\n",
+    "        initial,\n",
+    "        ToolMessage(\n",
+    "            tool_call_id=initial.tool_calls[0][\"id\"],\n",
+    "            content=json.dumps(\n",
+    "                {\"reflection\": initial.tool_calls[0][\"args\"][\"reflection\"]}\n",
+    "            ),\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "revised"
+   ],
+   "id": "b077460e81287dc3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "attempt: 0\n",
+      "state: [HumanMessage(content='Graph the total number of orders of each customer. X axis of the graph has to be in ascending order.'), AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_crwz', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer ID and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"}}', 'name': 'AnswerQuestion'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 152, 'prompt_tokens': 1916, 'total_tokens': 2068, 'completion_time': 0.483804853, 'prompt_time': 0.246390502, 'queue_time': None, 'total_time': 0.730195355}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_c1a4bcec29', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-a27ec4b1-926a-467a-84ae-32118110e715-0', tool_calls=[{'name': 'AnswerQuestion', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'reflection': {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}}, 'id': 'call_crwz'}]), ToolMessage(content='{\"reflection\": {\"good\": \"The query effectively groups the orders by customer ID and counts the total orders for each customer.\", \"improvements\": \"Consider adding a filter to only include customers with a minimum number of orders.\", \"missing\": \"The query does not provide any additional insights beyond the total orders per customer.\"}}', tool_call_id='call_crwz')]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_9fq3', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer ID and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"},\"think_process\":[\"The original question asked for a graph of the total number of orders for each customer. The query provided accomplishes this task, but could be improved by adding a filter to only include customers with a minimum number of orders.\"]}', 'name': 'ReviseAnswer'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 179, 'prompt_tokens': 2209, 'total_tokens': 2388, 'completion_time': 0.583402465, 'prompt_time': 0.257725929, 'queue_time': None, 'total_time': 0.8411283940000001}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_2f30b0b571', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-c63ad7b8-9b1c-4b1b-a9cb-2bdb24003911-0', tool_calls=[{'name': 'ReviseAnswer', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) AS total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'reflection': {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}, 'think_process': ['The original question asked for a graph of the total number of orders for each customer. The query provided accomplishes this task, but could be improved by adding a filter to only include customers with a minimum number of orders.']}, 'id': 'call_9fq3'}])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6ac5c345f14c1a42"
   }
  ],
  "metadata": {
